# sdk-rust

./: .dockerignore  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
agent-worker/: Cargo.toml
agent-worker/src/: main.rs
agent-worker/src/tools/: children.rs  mod.rs  signal_child.rs  signal_parent.rs  spawn_agent.rs
examples/data-pipeline/: Cargo.toml
examples/data-pipeline/src/: main.rs  models.rs
examples/data-pipeline/src/tasks/: aggregation_task.rs  ingestion_task.rs  mod.rs  transformation_task.rs  validation_task.rs
examples/data-pipeline/src/workflows/: mod.rs  pipeline_workflow.rs
examples/ecommerce/: Cargo.toml
examples/ecommerce/src/: main.rs  models.rs
examples/ecommerce/src/tasks/: inventory_task.rs  mod.rs  payment_task.rs  shipment_task.rs
examples/ecommerce/src/workflows/: mod.rs  order_workflow.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/patterns/: Cargo.toml
examples/patterns/src/: child_workflow.rs  main.rs  parallel_tasks.rs  parallel_workflow.rs  promise_workflow.rs  retry_workflow.rs  signal_workflow.rs  timer_workflow.rs
examples/standalone-tasks/: Cargo.toml
examples/standalone-tasks/src/: main.rs
ffi/: Cargo.toml  uniffi-bindgen.rs
ffi/src/: activation.rs  client.rs  command.rs  config.rs  context.rs  error.rs  lib.rs  types.rs  worker.rs
sdk/: Cargo.toml  README.md  build.rs
sdk/src/: error.rs  lib.rs
sdk/src/client/: builder.rs  flovyn_client.rs  grpc_task_submitter.rs  hook.rs  mod.rs  task_execution.rs  worker_lifecycle.rs  workflow_dispatch.rs  workflow_query.rs
sdk/src/task/: context.rs  context_impl.rs  definition.rs  executor.rs  mod.rs  registry.rs
sdk/src/task/streaming/: mod.rs  types.rs
sdk/src/telemetry/: mod.rs
sdk/src/testing/: assertions.rs  builders.rs  mock_task_context.rs  mock_workflow_context.rs  mod.rs  test_environment.rs  time_controller.rs
sdk/src/worker/: determinism.rs  executor.rs  mod.rs  registry.rs  task_worker.rs  workflow_worker.rs
sdk/src/worker/lifecycle/: hooks.rs  mod.rs  reconnection.rs
sdk/src/workflow/: combinators.rs  command.rs  context.rs  context_impl.rs  definition.rs  event.rs  future.rs  mod.rs  recorder.rs  task_submitter.rs
sdk/tests/e2e/: child_workflow_tests.rs  comprehensive_tests.rs  concurrency_tests.rs  error_tests.rs  harness.rs  lifecycle_tests.rs  mod.rs  parallel_tests.rs  promise_tests.rs  replay_tests.rs  replay_utils.rs  state_tests.rs  streaming_tests.rs  task_tests.rs  test_env.rs  timer_tests.rs  workflow_tests.rs
sdk/tests/e2e/fixtures/: tasks.rs  workflows.rs
sdk/tests/model/: bridge.rs  comparison.rs  sequence_matching.rs
sdk/tests/shared/replay-corpus/: child-workflow.json  determinism-child-workflow-loop.json  determinism-loop-shortened.json  determinism-mixed-commands.json  determinism-task-loop.json  determinism-violation-child-kind.json  determinism-violation-child-name.json  determinism-violation-task-order.json  determinism-violation-task-type.json  multiple-operations.json  promise.json  (+11 more)
sdk/tests/tck/: determinism_corpus.rs  mod.rs
sdk/tests/unit/: determinism_props.rs  mod.rs  shared_corpus.rs  state_machine_props.proptest-regressions  state_machine_props.rs
worker-core/: Cargo.toml  build.rs
worker-core/proto/: flovyn.proto
worker-core/src/: error.rs  lib.rs
worker-core/src/client/: agent_dispatch.rs  mod.rs  oauth2.rs  task_execution.rs  worker_lifecycle.rs  workflow_dispatch.rs  workflow_query.rs
worker-core/src/task/: execution.rs
worker-core/src/worker/: determinism.rs  mod.rs
worker-core/src/workflow/: event.rs  execution.rs  recorder.rs  replay_engine.rs
worker-ffi/: Cargo.toml  uniffi-bindgen.rs
worker-ffi/src/: activation.rs  client.rs  command.rs  config.rs  context.rs  error.rs  types.rs  worker.rs
worker-napi/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
worker-napi/npm/darwin-arm64/: package.json
worker-napi/npm/darwin-x64/: package.json
worker-napi/npm/linux-arm64-gnu/: package.json
worker-napi/npm/linux-arm64-musl/: package.json
worker-napi/npm/linux-x64-gnu/: package.json
worker-napi/npm/linux-x64-musl/: package.json
worker-napi/npm/win32-x64-msvc/: package.json
worker-napi/src/: activation.rs  client.rs  command.rs  config.rs  context.rs  error.rs  lib.rs  types.rs  worker.rs
worker-sdk/: Cargo.toml  README.md  build.rs
worker-sdk/migrations/: 20260217000000_initial_schema.sql
worker-sdk/src/: error.rs  lib.rs
worker-sdk/src/agent/: budget.rs  builder.rs  catalog.rs  child.rs  combinators.rs  context.rs  context_impl.rs  definition.rs  executor.rs  external.rs  future.rs  mod.rs  queue.rs  registry.rs  session.rs  signals.rs  storage.rs  tracer.rs
worker-sdk/src/client/: builder.rs  flovyn_client.rs  mod.rs
worker-sdk/src/common/: mod.rs  version.rs
worker-sdk/src/config/: mod.rs
worker-sdk/src/task/: context.rs  context_impl.rs  mod.rs  registry.rs
worker-sdk/src/telemetry/: mod.rs
worker-sdk/src/testing/: assertions.rs  builders.rs  mock_agent_context.rs  mock_task_context.rs  mock_workflow_context.rs  mod.rs  test_environment.rs  time_controller.rs
worker-sdk/src/worker/: agent_worker.rs  determinism.rs  executor.rs  mod.rs  registry.rs  task_worker.rs  workflow_worker.rs
worker-sdk/src/workflow/: combinators.rs  command.rs  context.rs  context_impl.rs  definition.rs  event.rs  future.rs  mod.rs  outcome.rs  recorder.rs
worker-sdk/tests/: local_agent_test.rs
worker-sdk/tests/e2e/: agent_tests.rs  child_workflow_tests.rs  comprehensive_tests.rs  concurrency_tests.rs  error_tests.rs  harness.rs  lifecycle_tests.rs  mod.rs  parallel_tests.rs  promise_tests.rs  replay_tests.rs  replay_utils.rs  signal_tests.rs  state_tests.rs  streaming_tests.rs  task_tests.rs  test_env.rs  timer_tests.rs  workflow_tests.rs
worker-sdk/tests/model/: bridge.rs  comparison.rs  join_all.rs  mod.rs  select.rs
worker-sdk/tests/tck/: determinism_corpus.rs  mod.rs
worker-sdk/tests/unit/: determinism_props.rs  mod.rs  shared_corpus.rs  state_machine_props.rs
(+110 files in other folders)
