[package]
name = "flovyn-agent-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for running and managing local Flovyn agents"

[[bin]]
name = "flovyn-agent"
path = "src/main.rs"

[dependencies]
flovyn-worker-sdk = { path = "../worker-sdk", features = ["local"] }
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
async-trait.workspace = true
