[package]
name = "flovyn-sdk"
version = "0.1.0"
edition = "2021"
description = "Flovyn SDK for Rust - Workflow orchestration"
license = "Apache-2.0"
repository = "https://github.com/flovyn/sdk-rust"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency primitives
parking_lot = "0.12"

# System info
hostname = "0.4"

# Hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = "1"

# E2E test dependencies
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
# Enable testing utilities (MockWorkflowContext, TestWorkflowEnvironment, etc.)
testing = []

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "tck"
path = "tests/tck/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
