[package]
name = "flovyn-worker-core"
version = "0.1.0"
edition = "2021"
description = "Flovyn Worker Core - Language-agnostic workflow orchestration core"
license = "Apache-2.0"
repository = "https://github.com/flovyn/sdk-rust"

[dependencies]
# gRPC
tonic = { version = "0.11", features = ["tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# Async
tokio = { version = "1.37", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency primitives
parking_lot = "0.12"

# System info
hostname = "0.4"

# Hashing
sha2 = "0.10"
hex = "0.4"

# HTTP client (for OAuth2)
# Using rustls-tls instead of native-tls for cross-compilation support
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = ["oauth2"]
oauth2 = ["dep:reqwest"]

[build-dependencies]
tonic-build = "0.11"
