[package]
name = "flovyn-worker-napi"
version = "0.1.0"
edition = "2021"
description = "Flovyn Worker NAPI - Node.js bindings for cross-language SDK support"
license = "Apache-2.0"
repository = "https://github.com/flovyn/sdk-rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
flovyn-worker-core = { path = "../worker-core" }
napi = { version = "2", default-features = false, features = ["async", "serde-json", "napi8"] }
napi-derive = "2"
tokio = { version = "1.37", features = ["rt-multi-thread", "sync"] }
tonic = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
parking_lot = "0.12"
chrono = "0.4"
thiserror = "1"
tracing = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
