[package]
name = "flovyn-worker-sdk"
version = "0.1.0"
edition = "2021"
description = "Flovyn Worker SDK for Rust - Workflow orchestration"
license = "Apache-2.0"
repository = "https://github.com/flovyn/sdk-rust"

[dependencies]
# Flovyn Worker Core
flovyn-worker-core = { path = "../worker-core" }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC
tonic = { version = "0.11", features = ["tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema generation (like Kotlin's JsonSchemaGenerator)
schemars = "1"

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency primitives
parking_lot = "0.12"

# System info
hostname = "0.4"
whoami = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Futures traits
futures = "0.3"

# SQLite (for local agent storage)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = "1"
futures = "0.3"

# Model checking
stateright = "0.30"
num_cpus = "1.16"

# E2E test dependencies
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[build-dependencies]
# tonic-build moved to flovyn-core

[features]
default = ["oauth2"]
# Enable testing utilities (MockWorkflowContext, TestWorkflowEnvironment, etc.)
testing = []
# Enable OAuth2 authentication (client credentials flow)
oauth2 = ["flovyn-worker-core/oauth2"]
# Enable local agent storage with SQLite
local = ["sqlx"]

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "tck"
path = "tests/tck/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "model"
path = "tests/model/mod.rs"

[[test]]
name = "local_agent"
path = "tests/local_agent_test.rs"
required-features = ["local"]
