[package]
name = "data-pipeline-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ETL data pipeline workflow with DAG pattern"

[dependencies]
flovyn-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dotenvy.workspace = true

[dev-dependencies]
flovyn-sdk = { path = "../../sdk", features = ["testing"] }
