[package]
name = "ecommerce-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E-commerce order processing workflow with saga pattern"

[dependencies]
flovyn-worker-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dotenvy.workspace = true

[dev-dependencies]
flovyn-worker-sdk = { path = "../../worker-sdk", features = ["testing"] }
