[package]
name = "hello-world-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal Flovyn workflow example"

[dependencies]
flovyn-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dotenvy.workspace = true

[dev-dependencies]
flovyn-sdk = { path = "../../sdk", features = ["testing"] }
