[package]
name = "patterns-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workflow pattern showcase (timers, promises, child workflows)"

[dependencies]
flovyn-worker-sdk.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dotenvy.workspace = true

[dev-dependencies]
flovyn-worker-sdk = { path = "../../worker-sdk", features = ["testing"] }
